Further layout fixes.
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/trunk@9340 d66e5487-c4fa-4dda-8c8e-ca23240363c0