@@ -45,13 +45,11 @@ import tufts.vue.VueResources;
 import tufts.vue.VueUtil;
 import edu.tufts.vue.preferences.ui.PreferencesDialog;
 
-
 /**
  * @author Mike Korcynski
  *
  */
-public class WindowPropertiesPreference extends StringPreference implements ItemListener, ActionListener
-{
+public class WindowPropertiesPreference extends StringPreference implements ItemListener, ActionListener {
 	private static final boolean DEBUG = true;
 	Hashtable table = new Hashtable();
 	private static final String ENABLED_KEY = "ENABLED_KEY";
@@ -67,7 +65,8 @@ public class WindowPropertiesPreference extends StringPreference implements Item
 	private String value;
 	private static JCheckBox checkValue = new JCheckBox();
 	private JButton resetButton = new JButton(VueResources.getString("button.reset.label"));
-	JPanel resetPanel = new JPanel();
+	private JPanel resetPanel = new JPanel();
+	private JPanel panel = null; 
 
 	/**
 	 * The first parameter in the string used to store the window position was originally intended 
@@ -84,9 +83,8 @@ public class WindowPropertiesPreference extends StringPreference implements Item
 		super(category, key, name, desc, defval, showInUI);
 		value = (String)getValue();
 		StringTokenizer tokens = new StringTokenizer(value,",");						
-				
-		try		
-		{
+
+		try {
 			table.put(ENABLED_KEY, tokens.nextToken());	
 			table.put(VISIBLE_KEY,tokens.nextToken());		
 			table.put(WIDTH_KEY, tokens.nextToken());		
@@ -94,8 +92,7 @@ public class WindowPropertiesPreference extends StringPreference implements Item
 			table.put(X_POS_KEY,tokens.nextToken());
 			table.put(Y_POS_KEY,tokens.nextToken());
 			table.put(ROLLEDUP_KEY,tokens.nextToken());		
-		}catch(NoSuchElementException nsee)
-		{
+		} catch(NoSuchElementException nsee) {
 			//nsee.printStackTrace();
 			//this shouldn't happen but if it does stuff the table with the defaults
 			table.put(ENABLED_KEY, "true");	
@@ -106,94 +103,83 @@ public class WindowPropertiesPreference extends StringPreference implements Item
 			table.put(Y_POS_KEY,"-1");
 			table.put(ROLLEDUP_KEY,"false");
 		}
-		finally
-		{
+		finally {
 			getCheckBox().setSelected(isEnabled());
 		}
 		return;
 	}
 
-	public boolean isAllValuesDefaults()
-	{
+	public boolean isAllValuesDefaults() {
 		if (	this.isEnabled() && 
 				!this.isWindowVisible() && 
 				this.getWindowSize().getHeight() == -1 && 
 				this.getWindowSize().getWidth() == -1 &&
 				this.getWindowLocationOnScreen().getX() == -1.0 &&
-				this.getWindowLocationOnScreen().getY() == -1.0)
-		{
+				this.getWindowLocationOnScreen().getY() == -1.0) {
 			return true;
-		}
-		else
+		} else
 			return false;
-		
 	}
+
 	public void itemStateChanged(ItemEvent e) {
 		JCheckBox box = (JCheckBox)e.getSource();
-		
-		
-			//System.out.println("ITEM STATE CHANGED");
-			defaultEnabledVal = (new Boolean(box.isSelected()).toString());
-			
-			if (p2.get("enabledWinPos", "null").equals("null"))
-				p2.put("enabledWinPos", defaultEnabledVal);
-			else
-				p2.put("enabledWinPos",defaultEnabledVal);
-		
-			defaultEnabledVal = p2.get("enabledWinPos",defaultEnabledVal);
-			table.put(ENABLED_KEY, box.isSelected());
-			configureResetPanel();
-			panel.validate();
-			panel.repaint();
-		
-	}
-	public static WindowPropertiesPreference create(String category, String key, String name, String desc, boolean showInUI)
-	{
-		return new WindowPropertiesPreference(category,key,name,desc,showInUI);
-	}
-	
-	//show in UI defaults to true
-	public static WindowPropertiesPreference create(String category, String key, String name, String desc)
-	{
-		return new WindowPropertiesPreference(category,key,name,desc,true);
-	}
-		
-	public void setEnabled(boolean enable)
-	{
-		//System.out.println("FLIPPING ENABLED?" + enable);
-		defaultEnabledVal = Boolean.valueOf(enable).toString();
+
+		//System.out.println("ITEM STATE CHANGED");
+		defaultEnabledVal = (new Boolean(box.isSelected()).toString());
 		
 		if (p2.get("enabledWinPos", "null").equals("null"))
 			p2.put("enabledWinPos", defaultEnabledVal);
 		else
 			p2.put("enabledWinPos",defaultEnabledVal);
 	
-		
+		defaultEnabledVal = p2.get("enabledWinPos",defaultEnabledVal);
+		table.put(ENABLED_KEY, box.isSelected());
+		configureResetPanel();
+		panel.validate();
+		panel.repaint();
+	}
+
+	public static WindowPropertiesPreference create(String category, String key, String name, String desc, boolean showInUI) {
+		return new WindowPropertiesPreference(category,key,name,desc,showInUI);
+	}
+
+	//show in UI defaults to true
+	public static WindowPropertiesPreference create(String category, String key, String name, String desc) {
+		return new WindowPropertiesPreference(category,key,name,desc,true);
+	}
+
+	public void setEnabled(boolean enable) {
+		//System.out.println("FLIPPING ENABLED?" + enable);
+		defaultEnabledVal = Boolean.valueOf(enable).toString();
+
+		if (p2.get("enabledWinPos", "null").equals("null"))
+			p2.put("enabledWinPos", defaultEnabledVal);
+		else
+			p2.put("enabledWinPos",defaultEnabledVal);
+
 		table.put(ENABLED_KEY, defaultEnabledVal);
 	}
-	public boolean isEnabled()
-	{	String set = p2.get("enabledWinPos", defaultEnabledVal);
-		if (set.equals("reset"))
-		{
+
+	public boolean isEnabled() {
+		String set = p2.get("enabledWinPos", defaultEnabledVal);
+
+		if (set.equals("reset")) {
 			set = "true";
 			p2.put("enabledWinPos", "true");
 		}
-		Boolean b =new Boolean(set);
-		return b;//Boolean.valueOf((String)table.get(ENABLED_KEY));
+
+		return new Boolean(set);//Boolean.valueOf((String)table.get(ENABLED_KEY));
 	}
-	public boolean isWindowVisible()
-	{
+
+	public boolean isWindowVisible() {
 		return Boolean.valueOf((String)table.get(VISIBLE_KEY));
 	}
-	
-	public Dimension getWindowSize()
-	{
+
+	public Dimension getWindowSize() {
 		return new Dimension(Integer.valueOf((String)table.get(WIDTH_KEY)),Integer.valueOf((String)table.get(HEIGHT_KEY)));
 	}
-	
-	public void actionPerformed(ActionEvent e)
-	{
-		String[] crap = null;
+
+	public void actionPerformed(ActionEvent e) {
 		try {
 			String[] keys = p2.keys();
 			for (int i = 0 ; i < keys.length; i++)
@@ -201,21 +187,22 @@ public class WindowPropertiesPreference extends StringPreference implements Item
 				if (keys[i].startsWith("windows."))
 					p2.remove(keys[i]);
 			}
+
 			String s = p2.get("enabledWinPos", "true");
+
 			if (s.equals("true"))
 				p2.put("enabledWinPos", "reset");
+
 			VueUtil.alert(PreferencesDialog.getDialog(), VueResources.getString("dialog.preference.message"), VueResources.getString("dialog.preference.title"), JOptionPane.PLAIN_MESSAGE);
 		} catch (BackingStoreException e2) {
-			// TODO Auto-generated catch block
 			e2.printStackTrace();
 		}		
 	}
 	
-	private JPanel panel = null; 
-	
 	public JComponent getPreferenceUI() {
-		if (panel != null)
+		if (panel != null) {
 			return panel;
+		}
 
 		panel = new JPanel();
 		panel.setBackground(Color.WHITE);
@@ -230,106 +217,84 @@ public class WindowPropertiesPreference extends StringPreference implements Item
 		GridBagConstraints gbConstraints = new GridBagConstraints();
 	  
 		gbConstraints.gridx = 0;
-        gbConstraints.gridy = 0;
-        gbConstraints.gridwidth = 1;
-        gbConstraints.fill = GridBagConstraints.HORIZONTAL;
-        gbConstraints.anchor = GridBagConstraints.FIRST_LINE_START;
-        gbConstraints.weightx = 1;
-        gbConstraints.weighty = 0;
-        gbConstraints.insets = new Insets(15, 10, 0, 10);
-        
-        panel.add(titleLabel, gbConstraints);
-    
+		gbConstraints.gridy = 0;
+		gbConstraints.gridwidth = 1;
+		gbConstraints.fill = GridBagConstraints.HORIZONTAL;
+		gbConstraints.anchor = GridBagConstraints.FIRST_LINE_START;
+		gbConstraints.weightx = 1;
+		gbConstraints.weighty = 0;
+		gbConstraints.insets = new Insets(15, 10, 0, 10);
+
+		panel.add(titleLabel, gbConstraints);
+
 		gbConstraints.gridy = 1;
 		panel.add(descLabel, gbConstraints);
 		
-		JPanel booleanPanel = new JPanel();
-        booleanPanel.setLayout(new FlowLayout(FlowLayout.LEFT));
-        booleanPanel.setBackground(Color.WHITE);
+		checkValue.addItemListener(this);
+		checkValue.setBackground(Color.WHITE);
+		checkValue.setSelected(isEnabled());
+		checkValue.setText(getMessage());
 
-        checkValue.addItemListener(this);
-        checkValue.setBackground(Color.WHITE);
-        checkValue.setSelected(isEnabled());
+		gbConstraints.gridy = 2;
+		gbConstraints.insets = new Insets(15, 30, 0, 10);
+		panel.add(checkValue, gbConstraints);
 
-        booleanPanel.add(checkValue);
-        booleanPanel.add(new JLabel(getMessage()));
+		FlowLayout flow = new FlowLayout(FlowLayout.LEADING);
+		flow.setHgap(10);
+		flow.setVgap(0);
+		resetPanel.setLayout(flow);
+		resetPanel.setBackground(Color.WHITE);
+		resetPanel.setBorder(BorderFactory.createMatteBorder(1, 0, 0, 0, Color.gray));
 
-        gbConstraints.gridy = 2;
-        gbConstraints.fill = GridBagConstraints.BOTH;
-        gbConstraints.insets = new Insets(15, 30, 0, 10);
-        panel.add(booleanPanel, gbConstraints);
-        
-		resetPanel.setLayout(new FlowLayout(FlowLayout.LEFT));
-    	resetPanel.setBackground(Color.WHITE);
-    	resetPanel.setBorder(BorderFactory.createMatteBorder(1, 0, 0, 0, Color.gray));
+		resetButton.addActionListener(this);
 
-    	resetButton.addActionListener(this);
+		resetPanel.add(resetButton);
+		resetPanel.add(new JLabel(VueResources.getString("jlabel.resetdefaultwindow")));
 
-    	resetPanel.add(resetButton);
-    	resetPanel.add(new JLabel(VueResources.getString("jlabel.resetdefaultwindow")));
-    	gbConstraints.gridy = 3;
-    	panel.add(resetPanel, gbConstraints);
-        configureResetPanel();
+		gbConstraints.gridy = 3;
+		gbConstraints.insets = new Insets(15, 20, 0, 10);
+		gbConstraints.fill = GridBagConstraints.BOTH;
+		gbConstraints.weighty = 1;
+		panel.add(resetPanel, gbConstraints);
+		configureResetPanel();
 
-        JPanel emptyPanel = new JPanel();
-    	gbConstraints.gridy = 4;
-        gbConstraints.fill = GridBagConstraints.REMAINDER;
-        gbConstraints.weighty = 1;
-        panel.add(emptyPanel, gbConstraints);
+		if (DEBUG) {
+			panel.setBackground(Color.CYAN);
+			resetPanel.setBackground(Color.MAGENTA);
+			titleLabel.setBackground(Color.YELLOW);
+			titleLabel.setOpaque(true);
+			descLabel.setBackground(Color.YELLOW);
+			descLabel.setOpaque(true);
+			checkValue.setBackground(Color.YELLOW);
+			checkValue.setOpaque(true);
+			resetButton.setBackground(Color.YELLOW);
+			resetButton.setOpaque(true);
+		}
 
-        if (DEBUG) {
-        	panel.setBackground(Color.CYAN);
-        	booleanPanel.setBackground(Color.MAGENTA);
-        	resetPanel.setBackground(Color.MAGENTA);
-        	emptyPanel.setBackground(Color.MAGENTA);
-        	titleLabel.setBackground(Color.YELLOW);
-        	titleLabel.setOpaque(true);
-        	descLabel.setBackground(Color.YELLOW);
-        	descLabel.setOpaque(true);
-        	checkValue.setBackground(Color.YELLOW);
-        	checkValue.setOpaque(true);
-        	resetButton.setBackground(Color.YELLOW);
-        	resetButton.setOpaque(true);
-        }
-
-        return panel;
-        
+		return panel;
 	}
 
-	private void configureResetPanel()
-	{
-		
-		
-		GridBagConstraints gbConstraints = new GridBagConstraints();
-		
-		if ( p2.get("enabledWinPos", "true").equals("true") || p2.get("enabledWinPos", "true").equals("reset"))
-        {
-        	resetPanel.setVisible(true);
-        
-     
-        }
-		else
-		{
+	private void configureResetPanel() {
+		if ( p2.get("enabledWinPos", "true").equals("true") || p2.get("enabledWinPos", "true").equals("reset")) {
+			resetPanel.setVisible(true);
+		} else {
 			resetPanel.setVisible(false);
 		}
-        
 	}
-	private static JCheckBox getCheckBox()
-	{
+
+	private static JCheckBox getCheckBox() {
 		return checkValue;
 	}
-	
-	public Point getWindowLocationOnScreen()
-	{
+
+	public Point getWindowLocationOnScreen() {
 		return new Point(Integer.valueOf((String)table.get(X_POS_KEY)),Integer.valueOf((String)table.get(Y_POS_KEY)));
 	}
-	
-	public boolean isRolledUp()
-	{
+
+	public boolean isRolledUp() {
 		return Boolean.valueOf((String)table.get(ROLLEDUP_KEY));
 	}
-	public void updateWindowProperties(boolean visible, int width, int height, int x, int y, boolean rolled)
-	{
+
+	public void updateWindowProperties(boolean visible, int width, int height, int x, int y, boolean rolled) {
 		//table.put(ENABLED_KEY, "true");
 		table.put(VISIBLE_KEY, Boolean.valueOf(visible).toString());
 		table.put(WIDTH_KEY, Integer.valueOf(width).toString());
@@ -337,14 +302,13 @@ public class WindowPropertiesPreference extends StringPreference implements Item
 		table.put(X_POS_KEY, Integer.valueOf(x).toString());
 		table.put(Y_POS_KEY, Integer.valueOf(y).toString());
 		table.put(ROLLEDUP_KEY, Boolean.valueOf(rolled).toString());
-		
+
 		StringBuffer sb = new StringBuffer();
 		String enabled = p2.get("enabledWinPos", defaultEnabledVal);
-		
-			
+
 		sb.append(enabled);
-		if (!enabled.equals("reset"))
-		{	
+
+		if (!enabled.equals("reset")) {	
 			sb.append(",");
 			sb.append(Boolean.valueOf(visible).toString());
 			sb.append(",");
@@ -360,6 +324,5 @@ public class WindowPropertiesPreference extends StringPreference implements Item
 			//	System.out.println(sb.toString());
 		}
 		setValue(sb.toString());
-		
 	}
 }
